--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css">
     <title>Hi, I'm Ussuy</title>
 </head>
 <body>
-    <h1>Arthur Ussuy</h1>
+    <main class="profile">
+        <div class="profile_photo"></div>
+        <h1 class="profile_title">Arthur Ussuy Ferrari</h1>
+        <h2 class="profile_subtitle">Front-end Developer</h2>
+    </main>
 </body>
 </html>
