added vue cdn and webpack build

--- a/index.html
+++ b/index.html
@@ -8,11 +8,8 @@
     <title>Hi, I'm Ussuy</title>
 </head>
 <body>
-    <main class="profile">
-        <div class="profile_photo"></div>
-        <h1 class="profile_title">Arthur Ussuy Ferrari</h1>
-        <h2 class="profile_subtitle">Front-end Developer</h2>
-    </main>
+    <div id="app"></div>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="./dist/bundle.js"></script>
 </body>
 </html>
