adicionado canvas e webpack

--- a/index.html
+++ b/index.html
@@ -8,8 +8,27 @@
     <title>Hi, I'm Ussuy</title>
 </head>
 <body>
-    <div id="app"></div>
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src="./dist/bundle.js"></script>
+    <canvas id="bgCanvas"></canvas>
+    <!-- <header class="header">
+    <h1 class="header_title">Arthur Ussuy</h1>
+        <nav class="header_nav">
+            <ul class="header_list">
+                <li class="header_item">Home</li>
+                <li class="header_item">Eu faço sites</li>
+                <li class="header_item">Como posso te ajudar?</li>
+                <li class="header_item">Portfolio</li>
+                <li class="header_item">Orçamento</li>
+                <li class="header_item">Contato</li>
+            </ul>
+        </nav>
+    </header> -->
+    <main class="main">
+        <div class="main_wrap">
+            <h1 class="main_title">Arthur Ussuy</h1>
+            <h2 class="main_subtitle">Web designer</h2>
+            <h2 class="main_subtitle">Desenvolvedor Front end</h2>
+        </div>
+    </main>
 </body>
+<script src="./dist/bundle.js"></script>
 </html>
