--- a/index.html
+++ b/index.html
@@ -7,21 +7,19 @@
     <link rel="stylesheet" href="./dist/bundle.css">
     <title>Hi, I'm Ussuy</title>
 </head>
+<canvas id="bgCanvas"></canvas>
 <body>
-    <canvas id="bgCanvas"></canvas>
-    <!-- <header class="header">
+    <header class="header">
     <h1 class="header_title">Arthur Ussuy</h1>
         <nav class="header_nav">
             <ul class="header_list">
-                <li class="header_item">Home</li>
-                <li class="header_item">Eu faço sites</li>
-                <li class="header_item">Como posso te ajudar?</li>
+                <li class="header_item header_item--active">Home</li>
                 <li class="header_item">Portfolio</li>
                 <li class="header_item">Orçamento</li>
                 <li class="header_item">Contato</li>
             </ul>
         </nav>
-    </header> -->
+    </header>
     <main class="main">
         <div class="main_wrap">
             <h1 class="main_title">Arthur Ussuy</h1>
