--- a/index.html
+++ b/index.html
@@ -20,8 +20,14 @@
             </ul>
         </nav>
     </header>
-    <main class="main">
-        <div class="main_wrap">
+    <main class="main" id="main">
+        <div class="main_principal active">
+            <h1 class="main_title">Arthur Ussuy</h1>
+            <h2 class="main_subtitle">Web designer</h2>
+            <h2 class="main_subtitle">Desenvolvedor Front end</h2>
+        </div>
+
+        <div class="main_description">
             <h1 class="main_title">Arthur Ussuy</h1>
             <h2 class="main_subtitle">Web designer</h2>
             <h2 class="main_subtitle">Desenvolvedor Front end</h2>
