--- a/index.html
+++ b/index.html
@@ -21,16 +21,15 @@
         </nav>
     </header>
     <main class="main" id="main">
-        <div class="main_principal active">
-            <h1 class="main_title">Arthur Ussuy</h1>
-            <h2 class="main_subtitle">Web designer</h2>
-            <h2 class="main_subtitle">Desenvolvedor Front end</h2>
+
+        <div class="profile">
+            <h1 class="profile_title">Arthur Ussuy</h1>
+            <h2 class="profile_subtitle">Web designer</h2>
+            <h2 class="profile_subtitle">Desenvolvedor Front end</h2>
         </div>
 
-        <div class="main_description">
-            <h1 class="main_title">Arthur Ussuy</h1>
-            <h2 class="main_subtitle">Web designer</h2>
-            <h2 class="main_subtitle">Desenvolvedor Front end</h2>
+        <div class="bio">
+            <p class="bio_text">Focado em desenvolvimento de produtos.</p>
         </div>
     </main>
 </body>
